use admissionregistration.k8s.io/v1 MutatingWebhookConfiguration

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -504,13 +504,15 @@ subjects:
     name: machine-controller
     namespace: kube-system
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: machinedeployments.machine-controller.kubermatic.io
 webhooks:
 - name: machinedeployments.machine-controller.kubermatic.io
   failurePolicy: Fail
+  sideEffects: None
+  admissionReviewVersions: ["v1", "v1beta1"]
   rules:
   - apiGroups:
     - "cluster.k8s.io"
@@ -529,6 +531,8 @@ webhooks:
     caBundle: __admission_ca_cert__
 - name: machines.machine-controller.kubermatic.io
   failurePolicy: Fail
+  sideEffects: None
+  admissionReviewVersions: ["v1", "v1beta1"]
   rules:
   - apiGroups:
     - "cluster.k8s.io"
