--- a/pkg/userdata/centos/testdata/kubelet-v1.17-aws-external.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.17-aws-external.yaml
@@ -67,14 +67,9 @@ write_files:
     swapoff -a
 
 
-    yum install -y yum-utils
-    yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
-    sed -i 's/\$releasever/7/g' /etc/yum.repos.d/docker-ce.repo
-    yum-config-manager --save --setopt=docker-ce-stable.module_hotfixes=true
-
-    DOCKER_VERSION='19.03.12-3.el7'
-    yum install -y docker-ce-${DOCKER_VERSION} \
-      docker-ce-cli-${DOCKER_VERSION} \
+    yum install -y \
+      device-mapper-persistent-data \
+      lvm2 \
       ebtables \
       ethtool \
       nfs-utils \
@@ -83,9 +78,31 @@ write_files:
       socat \
       wget \
       curl \
-      yum-plugin-versionlock \
       ipvsadm
-    yum versionlock add docker-ce-*
+
+
+    yum install -y yum-utils
+    yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
+    yum-config-manager --save --setopt=docker-ce-stable.module_hotfixes=true
+
+    mkdir -p /etc/systemd/system/containerd.service.d /etc/systemd/system/docker.service.d
+
+    cat <<EOF | tee /etc/systemd/system/containerd.service.d/environment.conf /etc/systemd/system/docker.service.d/environment.conf
+    [Service]
+    Restart=always
+    EnvironmentFile=-/etc/environment
+    EOF
+
+    yum install -y \
+        docker-ce-19.03.13 \
+        docker-ce-cli-19.03.13 \
+        containerd.io-1.4.3 \
+        yum-plugin-versionlock
+    yum versionlock add docker-ce-* containerd.io
+
+    systemctl daemon-reload
+    systemctl enable --now docker
+
 
     opt_bin=/opt/bin
     cni_bin_dir=/opt/cni/bin
@@ -144,10 +161,8 @@ write_files:
     mkdir -p /etc/systemd/system/kubelet.service.d/
     /opt/bin/setup_net_env.sh
 
-    systemctl enable --now docker
     systemctl enable --now kubelet
     systemctl enable --now --no-block kubelet-healthcheck.service
-    systemctl enable --now --no-block docker-healthcheck.service
 
 - path: "/opt/bin/supervise.sh"
   permissions: "0755"
@@ -183,15 +198,13 @@ write_files:
       --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
       --kubeconfig=/var/lib/kubelet/kubeconfig \
       --config=/etc/kubernetes/kubelet.conf \
-      --network-plugin=cni \
-      --cni-conf-dir=/etc/cni/net.d \
-      --cni-bin-dir=/opt/cni/bin \
       --cert-dir=/etc/kubernetes/pki \
       --cloud-provider=external \
       --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
-      --volume-plugin-dir=/var/lib/kubelet/volumeplugins \
+      --container-runtime=docker \
+      --container-runtime-endpoint=unix:///var/run/dockershim.sock \
       --node-ip ${KUBELET_NODE_IP}
 
     [Install]
@@ -295,6 +308,7 @@ write_files:
       cpu: 200m
       ephemeral-storage: 1Gi
       memory: 200Mi
+    volumePluginDir: /var/lib/kubelet/volumeplugins
     volumeStatsAggPeriod: 0s
 
 
@@ -366,25 +380,6 @@ write_files:
     [Install]
     WantedBy=multi-user.target
 
-
-- path: /etc/systemd/system/docker-healthcheck.service
-  permissions: "0644"
-  content: |
-    [Unit]
-    Requires=docker.service
-    After=docker.service
-
-    [Service]
-    ExecStart=/opt/bin/health-monitor.sh container-runtime
-
-    [Install]
-    WantedBy=multi-user.target
-
-- path: /etc/systemd/system/docker.service.d/environment.conf
-  permissions: "0644"
-  content: |
-    [Service]
-    EnvironmentFile=-/etc/environment
 
 runcmd:
 - systemctl start setup.service
