--- a/pkg/userdata/coreos/testdata/v1.17.16-vsphere.yaml
+++ b/pkg/userdata/coreos/testdata/v1.17.16-vsphere.yaml
@@ -141,9 +141,6 @@ systemd:
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/var/lib/kubelet/kubeconfig \
           --config=/etc/kubernetes/kubelet.conf \
-          --network-plugin=cni \
-          --cni-conf-dir=/etc/cni/net.d \
-          --cni-bin-dir=/opt/cni/bin \
           --cert-dir=/etc/kubernetes/pki \
           --cloud-provider=vsphere \
           --cloud-config=/etc/kubernetes/cloud-config \
@@ -151,7 +148,6 @@ systemd:
           --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
           --exit-on-lock-contention \
           --lock-file=/tmp/kubelet.lock \
-          --volume-plugin-dir=/var/lib/kubelet/volumeplugins \
           --node-ip ${KUBELET_NODE_IP}
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
         Restart=always
@@ -228,6 +224,7 @@ storage:
             cpu: 200m
             ephemeral-storage: 1Gi
             memory: 200Mi
+          volumePluginDir: /var/lib/kubelet/volumeplugins
           volumeStatsAggPeriod: 0s
 
 
