--- a/pkg/userdata/coreos/testdata/v1.18.14-vsphere-proxy.yaml
+++ b/pkg/userdata/coreos/testdata/v1.18.14-vsphere-proxy.yaml
@@ -147,9 +147,6 @@ systemd:
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/var/lib/kubelet/kubeconfig \
           --config=/etc/kubernetes/kubelet.conf \
-          --network-plugin=cni \
-          --cni-conf-dir=/etc/cni/net.d \
-          --cni-bin-dir=/opt/cni/bin \
           --cert-dir=/etc/kubernetes/pki \
           --cloud-provider=vsphere \
           --cloud-config=/etc/kubernetes/cloud-config \
@@ -158,7 +155,6 @@ systemd:
           --exit-on-lock-contention \
           --lock-file=/tmp/kubelet.lock \
           --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1 \
-          --volume-plugin-dir=/var/lib/kubelet/volumeplugins \
           --node-ip ${KUBELET_NODE_IP}
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
         Restart=always
@@ -246,6 +242,7 @@ storage:
             cpu: 200m
             ephemeral-storage: 1Gi
             memory: 200Mi
+          volumePluginDir: /var/lib/kubelet/volumeplugins
           volumeStatsAggPeriod: 0s
 
 
