--- a/pkg/userdata/flatcar/testdata/cloud-init_v1.20.1.yaml
+++ b/pkg/userdata/flatcar/testdata/cloud-init_v1.20.1.yaml
@@ -152,9 +152,6 @@ coreos:
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/var/lib/kubelet/kubeconfig \
           --config=/etc/kubernetes/kubelet.conf \
-          --network-plugin=cni \
-          --cni-conf-dir=/etc/cni/net.d \
-          --cni-bin-dir=/opt/cni/bin \
           --cert-dir=/etc/kubernetes/pki \
           --cloud-provider=anexia \
           --cloud-config=/etc/kubernetes/cloud-config \
@@ -162,7 +159,6 @@ coreos:
           --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
           --exit-on-lock-contention \
           --lock-file=/tmp/kubelet.lock \
-          --volume-plugin-dir=/var/lib/kubelet/volumeplugins \
           --node-ip ${KUBELET_NODE_IP}
       ExecStop=-/usr/bin/docker stop %n
       Restart=always
@@ -248,6 +244,7 @@ write_files:
       cpu: 200m
       ephemeral-storage: 1Gi
       memory: 200Mi
+    volumePluginDir: /var/lib/kubelet/volumeplugins
     volumeStatsAggPeriod: 0s
 
 
