--- a/pkg/userdata/sles/testdata/openstack.yaml
+++ b/pkg/userdata/sles/testdata/openstack.yaml
@@ -159,9 +159,6 @@ write_files:
       --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
       --kubeconfig=/var/lib/kubelet/kubeconfig \
       --config=/etc/kubernetes/kubelet.conf \
-      --network-plugin=cni \
-      --cni-conf-dir=/etc/cni/net.d \
-      --cni-bin-dir=/opt/cni/bin \
       --cert-dir=/etc/kubernetes/pki \
       --cloud-provider=openstack \
       --cloud-config=/etc/kubernetes/cloud-config \
@@ -169,7 +166,6 @@ write_files:
       --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
-      --volume-plugin-dir=/var/lib/kubelet/volumeplugins \
       --node-ip ${KUBELET_NODE_IP}
 
     [Install]
@@ -327,6 +323,7 @@ write_files:
       cpu: 200m
       ephemeral-storage: 1Gi
       memory: 200Mi
+    volumePluginDir: /var/lib/kubelet/volumeplugins
     volumeStatsAggPeriod: 0s
 
 
