--- a/pkg/userdata/sles/testdata/vsphere-proxy.yaml
+++ b/pkg/userdata/sles/testdata/vsphere-proxy.yaml
@@ -169,9 +169,6 @@ write_files:
       --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
       --kubeconfig=/var/lib/kubelet/kubeconfig \
       --config=/etc/kubernetes/kubelet.conf \
-      --network-plugin=cni \
-      --cni-conf-dir=/etc/cni/net.d \
-      --cni-bin-dir=/opt/cni/bin \
       --cert-dir=/etc/kubernetes/pki \
       --cloud-provider=vsphere \
       --cloud-config=/etc/kubernetes/cloud-config \
@@ -180,7 +177,6 @@ write_files:
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
       --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1 \
-      --volume-plugin-dir=/var/lib/kubelet/volumeplugins \
       --node-ip ${KUBELET_NODE_IP}
 
     [Install]
@@ -338,6 +334,7 @@ write_files:
       cpu: 200m
       ephemeral-storage: 1Gi
       memory: 200Mi
+    volumePluginDir: /var/lib/kubelet/volumeplugins
     volumeStatsAggPeriod: 0s
 
 
