--- a/test/e2e/provisioning/testdata/machinedeployment-azure-redhat-satellite.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-azure-redhat-satellite.yaml
@@ -33,6 +33,7 @@ spec:
             vmSize: "Standard_F2"
             # optional disk size values in GB. If not set, the defaults for the vmSize will be used.
             vnetName: "machine-controller-e2e"
+            vnetResourceGroup: ""
             subnetName: "machine-controller-e2e"
             imageID: "<< IMAGE_ID >>"
             assignPublicIP: true
