Return back --network-plugin=cni
Signed-off-by: Artiom Diomin <kron82@gmail.com>

--- a/pkg/userdata/coreos/testdata/v1.18.14-aws-disable-auto-update-external.yaml
+++ b/pkg/userdata/coreos/testdata/v1.18.14-aws-disable-auto-update-external.yaml
@@ -125,6 +125,7 @@ systemd:
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/var/lib/kubelet/kubeconfig \
           --config=/etc/kubernetes/kubelet.conf \
+          --network-plugin=cni \
           --cert-dir=/etc/kubernetes/pki \
           --cloud-provider=external \
           --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
