--- a/pkg/userdata/coreos/testdata/v1.18.14-aws-disable-auto-update.yaml
+++ b/pkg/userdata/coreos/testdata/v1.18.14-aws-disable-auto-update.yaml
@@ -125,6 +125,7 @@ systemd:
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/var/lib/kubelet/kubeconfig \
           --config=/etc/kubernetes/kubelet.conf \
+          --network-plugin=cni \
           --cert-dir=/etc/kubernetes/pki \
           --cloud-provider=aws \
           --cloud-config=/etc/kubernetes/cloud-config \
