--- a/pkg/userdata/coreos/testdata/v1.18.14-openstack-auto-update-multiple-dns.yaml
+++ b/pkg/userdata/coreos/testdata/v1.18.14-openstack-auto-update-multiple-dns.yaml
@@ -121,6 +121,7 @@ systemd:
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/var/lib/kubelet/kubeconfig \
           --config=/etc/kubernetes/kubelet.conf \
+          --network-plugin=cni \
           --cert-dir=/etc/kubernetes/pki \
           --cloud-provider=openstack \
           --cloud-config=/etc/kubernetes/cloud-config \
