--- a/pkg/userdata/flatcar/testdata/cloud-init_v1.18.14.yaml
+++ b/pkg/userdata/flatcar/testdata/cloud-init_v1.18.14.yaml
@@ -152,6 +152,7 @@ coreos:
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/var/lib/kubelet/kubeconfig \
           --config=/etc/kubernetes/kubelet.conf \
+          --network-plugin=cni \
           --cert-dir=/etc/kubernetes/pki \
           --cloud-provider=anexia \
           --cloud-config=/etc/kubernetes/cloud-config \
