--- a/pkg/userdata/rhel/testdata/kubelet-v1.18-aws.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.18-aws.yaml
@@ -198,6 +198,7 @@ write_files:
       --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
       --kubeconfig=/var/lib/kubelet/kubeconfig \
       --config=/etc/kubernetes/kubelet.conf \
+      --network-plugin=cni \
       --cert-dir=/etc/kubernetes/pki \
       --cloud-provider=aws \
       --cloud-config=/etc/kubernetes/cloud-config \
