--- a/pkg/userdata/ubuntu/testdata/openstack.yaml
+++ b/pkg/userdata/ubuntu/testdata/openstack.yaml
@@ -203,6 +203,7 @@ write_files:
       --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
       --kubeconfig=/var/lib/kubelet/kubeconfig \
       --config=/etc/kubernetes/kubelet.conf \
+      --network-plugin=cni \
       --cert-dir=/etc/kubernetes/pki \
       --cloud-provider=openstack \
       --cloud-config=/etc/kubernetes/cloud-config \
