Use wildcard hack for yum/apt-get install
Signed-off-by: Artiom Diomin <kron82@gmail.com>

--- a/pkg/userdata/centos/testdata/kubelet-v1.17-vsphere.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.17-vsphere.yaml
@@ -99,11 +99,11 @@ write_files:
     EOF
 
     yum install -y \
-        docker-ce-19.03.13 \
-        docker-ce-cli-19.03.13 \
-        containerd.io-1.4.3 \
+        docker-ce-cli-19.03* \
+        containerd.io-1.4* \
+        docker-ce-19.03* \
         yum-plugin-versionlock
-    yum versionlock add docker-ce-* containerd.io
+    yum versionlock add docker-ce* containerd.io
 
     systemctl daemon-reload
     systemctl enable --now docker
