--- a/pkg/userdata/ubuntu/testdata/vsphere-proxy.yaml
+++ b/pkg/userdata/ubuntu/testdata/vsphere-proxy.yaml
@@ -111,9 +111,9 @@ write_files:
     EOF
 
     apt-get install -y \
-        containerd.io=1.4.3* \
-        docker-ce=5:19.03.13* \
-        docker-ce-cli=5:19.03.13*
+        containerd.io=1.4* \
+        docker-ce-cli=5:19.03*
+        docker-ce=5:19.03*
     apt-mark hold docker-ce docker-ce-cli containerd.io
 
     systemctl daemon-reload
