Fix systemctl containerd for amzn2
Signed-off-by: Artiom Diomin <kron82@gmail.com>

--- a/pkg/userdata/amzn2/testdata/containerd-kubelet-v1.20-aws.yaml
+++ b/pkg/userdata/amzn2/testdata/containerd-kubelet-v1.20-aws.yaml
@@ -99,7 +99,7 @@ write_files:
     yum versionlock add containerd
 
     systemctl daemon-reload
-    systemctl enable --now docker
+    systemctl enable --now containerd
 
 
     opt_bin=/opt/bin
