--- a/pkg/userdata/ubuntu/testdata/multiple-ssh-keys.yaml
+++ b/pkg/userdata/ubuntu/testdata/multiple-ssh-keys.yaml
@@ -103,10 +103,10 @@ write_files:
     EOF
 
     apt-get install -y \
-        containerd.io=1.4.3* \
-        docker-ce=5:19.03.13* \
-        docker-ce-cli=5:19.03.13*
-    apt-mark hold docker-ce docker-ce-cli containerd.io
+        containerd.io=1.4* \
+        docker-ce-cli=5:19.03* \
+        docker-ce=5:19.03*
+    apt-mark hold docker-ce* containerd.io
 
     systemctl daemon-reload
     systemctl enable --now docker
