--- a/test/e2e/provisioning/testdata/machinedeployment-hetzner.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-hetzner.yaml
@@ -30,7 +30,7 @@ spec:
             location: "nbg1"
             networks:
               - "machine-controller-e2e"
-            firewall:
+            firewalls:
               - "machine-controller-e2e"
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
