[release/v1.19] Relaxed container runtime version (#990)
* Relax container-runtime version spec

Signed-off-by: Artiom Diomin <kron82@gmail.com>

* Update fixtures

Signed-off-by: Artiom Diomin <kron82@gmail.com>

* use the rhel ga instead of custom image on azure (#975)

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

* Fix RHEL on azure

Signed-off-by: Artiom Diomin <kron82@gmail.com>

Co-authored-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/userdata/rhel/testdata/kubelet-v1.15-aws.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.15-aws.yaml
@@ -72,9 +72,12 @@ write_files:
     sed -i 's/\$releasever/7/g' /etc/yum.repos.d/docker-ce.repo
     yum-config-manager --save --setopt=docker-ce-stable.module_hotfixes=true
 
-    DOCKER_VERSION='18.09.9-3.el7'
-    yum install -y docker-ce-${DOCKER_VERSION} \
-      docker-ce-cli-${DOCKER_VERSION} \
+    DOCKER_VERSION='18.09*'
+    yum install -y docker-ce-${DOCKER_VERSION} docker-ce-cli-${DOCKER_VERSION}
+
+    yum install -y \
+      device-mapper-persistent-data \
+      lvm2 \
       ebtables \
       ethtool \
       nfs-utils \
